--- a/layouts/partials/widgets/twitter.html
+++ b/layouts/partials/widgets/twitter.html
@@ -1,2 +1,3 @@
-<a class="twitter-timeline" href="https://twitter.com/akikuno_sh?ref_src=twsrc%5Etfw">Tweets by akikuno_sh</a>
+<a class="twitter-timeline" data-height="1000" href="https://twitter.com/akikuno_sh?ref_src=twsrc%5Etfw">Tweets by
+    akikuno_sh</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
