--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body {
-    font-family: 'BIZ UDPGothic', 'Noto Sans JP', sans-serif;
+    font-family: 'Roboto', 'BIZ UDPGothic', 'Noto Sans JP', sans-serif;
 }
